# MyMensorNoAr-AndroidApp-2017

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CuboSeaMensorVP.mtl  CuboVP.mtl  vpchecked.mtl
app/src/main/cpp/: IdMarkerDetectionFilter.cpp  IdMarkerDetectionFilter.hpp  ImageDetectionFilter.cpp  ImageDetectionFilter.hpp  MyMensorJNI.cpp  VpConfigureFilter.hpp
app/src/main/java/com/mymensor/: CognitoSyncClientManager.java  ConfigActivity.java  ConfigFileCreator.java  Constants.java  DeveloperAuthenticationProvider.java  DeveloperAuthenticationTask.java  ImageCapActivity.java  LoaderActivity.java  LoginCredentials.java  MainActivity.java  MymAccAuthenticator.java  MymAccAuthenticatorActivity.java  MymAuthenticatorService.java  MymCrypt.java  MymServerAuth.java  MymUtils.java  SntpClient.java  TouchImageView.java  TrackingValues.java  Utils.java  VolleyHelper.java
app/src/main/java/com/mymensor/adapters/: CameraProjectionAdapter.java
app/src/main/java/com/mymensor/cognitoclient/: AmazonCognitoSampleDeveloperAuthenticationClient.java  AmazonSharedPreferencesWrapper.java  AwsUtil.java  CognitoSampleDeveloperAuthenticationService.java  GetTokenRequest.java  GetTokenResponse.java  GetTokenResponseHandler.java  LoginRequest.java  LoginResponse.java  LoginResponseHandler.java  Request.java  Response.java  ResponseHandler.java  Utilities.java
app/src/main/java/com/mymensor/filters/: ARFilter.java  Filter.java  IdMarkerDetectionFilter.java  ImageDetectionFilter.java  NoneARFilter.java  NoneFilter.java  (+1 more)
app/src/main/jni/: IdMarkerDetectionFilter.cpp  IdMarkerDetectionFilter.hpp  ImageDetectionFilter.cpp  ImageDetectionFilter.hpp  MyMensorJNI.cpp  vpConfigureFilter.cpp  vpConfigureFilter.hpp
app/src/main/res/anim/: clockwise_rotation.xml
app/src/main/res/drawable/: animalogoseamensor.xml  border_marker_id_blue.xml  border_marker_id_red.xml  circular_button.xml  circular_button_gray.xml  circular_button_red.xml  custom_button_option_notselected.xml  custom_button_option_selected.xml  nobutton.xml  rembutton.xml  replaybutton.xml  yesbutton.xml
app/src/main/res/drawable-v21/: border_ar_switch.xml  circular_button.xml  circular_button_green.xml
app/src/main/res/layout/: activity_config.xml  activity_imagecap.xml  activity_loader.xml  activity_mymaccauthenticator.xml  content_loader.xml  content_main.xml  content_mymaccauthenticator.xml
app/src/main/res/layout-v21/: activity_config.xml  activity_imagecap.xml  activity_loader.xml  activity_mymaccauthenticator.xml  content_mymaccauthenticator.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/xml/: authenticator.xml  filepaths.xml
(+4 files in other folders)
